[tool.poetry]
name = "manimrepl"
version = "0.1.0"
description = "An example Repl to show how Manim can be run on repl.it"
authors = ["Aathish Sivasubrahmanian <aathish04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
manim = "^0.3.0"
manim-onlinetex = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
